force-app/main/default/objects/Solution_Offering__c/Solution_Offering__c.object-meta.xml
<CustomObject>
    <label>Solution Offering</label>
    <nameField>
        <label>Solution Offering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>