force-app/main/default/objects/Solution_Offering__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solution Offerings</relationshipLabel>
    <relationshipName>Solution_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>