force-app/main/default/objects/Solution_Offering__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Role</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Solution Offerings</relationshipLabel>
    <relationshipName>Solution_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>