force-app/main/default/objects/Solution_Offering__c/fields/N_A__c.field-meta.xml
<CustomField>
    <fullName>N_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>N/A</label>
    <type>Checkbox</type>
</CustomField>