force-app/main/default/objects/Solution_Offering__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Solution Offerings</relationshipLabel>
    <relationshipName>Solution_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>