force-app/main/default/objects/Solution_Offering__c/fields/Sold__c.field-meta.xml
<CustomField>
    <fullName>Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sold</label>
    <type>Checkbox</type>
</CustomField>